--- a/src/main.css
+++ b/src/main.css
@@ -25,6 +25,10 @@
 
   --font-color-white: rgb(255, 255, 255);
   --font-color-black: rgba(17, 17, 17, 0.89);
+  --background-color-black: rgba(17, 17, 17, 0.877);
+  --text-shadow: 3px 3px 20px #050304,
+  -2px 1px 30px #070607;
+  --box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px 0px;
   --gradient-main: linear-gradient(to right, #ada996, #f2f2f2, #dbdbdb, #eaeaea);;
 }
 
@@ -58,17 +62,21 @@ h1, h2, h3, h4, h5, h6 {
   line-height: normal;
 }
 
+/*Navbar*/
+
 nav.navbar {
+  background-color: var(--background-color-black);
   padding: 18px 0;
   position: fixed;
   width: 100vw;
   top: 0;
   z-index: 9999;
-  transition:  0.32s ease-in-out;
+  transition: all 0.32s ease-in-out;
 }
+
 nav.navbar.scrolled {
   padding: 0px 0;
-  background-color: var(--font-color-black);
+  background-color: rgba(0, 0, 0, 0.329);
 }
 nav.navbar a.navbar-brand {
   display: flex;
@@ -80,6 +88,11 @@ nav.navbar .navbar-nav {
   display: flex;
   align-items: flex-end;
   justify-content: flex-end;
+  padding-right: 1rem;
+}
+
+nav.navbar .navbar-toggler {
+  margin-right: 1rem;
 }
 
 nav.navbar .navbar-nav .nav-link.navbar-link {
@@ -99,12 +112,18 @@ nav.navbar .container {
   align-items: center;
   justify-content: space-between;
 }
-@media (min-width:1700px) {
-	nav.navbar .collapse .show {
-    background-color: #dbdbdb;
-  }
+
+/*Main LOGO*/
+
+.main-logo .carousel .carousel-item img {
+  width: 100vw;
 }
-/* nav.navbar .collapse {
-  display: flex;
-  justify-content: end;
+
+.main-logo .carousel .carousel-item .carousel-caption h2,
+.main-logo .carousel .carousel-item .carousel-caption p {
+  text-shadow: var(--text-shadow);
+}
+
+/* .main-logo .carousel .carousel-indicators {
+  box-shadow: var(--text-shadow);
 } */
