--- a/src/main.css
+++ b/src/main.css
@@ -124,6 +124,22 @@ nav.navbar .container {
   text-shadow: var(--text-shadow);
 }
 
-/* .main-logo .carousel .carousel-indicators {
-  box-shadow: var(--text-shadow);
-} */
+/*Portfolio*/
+
+.porfolio h2 {
+  color: var(--font-color-black);
+}
+
+.porfolio .container .row .nav {
+  gap: 1rem;
+}
+
+.porfolio .container .row .nav .nav-item .nav-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.porfolio .card {
+  filter: grayscale(100%);
+}
