--- a/src/main.css
+++ b/src/main.css
@@ -62,6 +62,14 @@ h1, h2, h3, h4, h5, h6 {
   line-height: normal;
 }
 
+a {
+  font-weight: 500;
+  opacity: 0.75;
+}
+a:hover {
+  opacity: 1;
+}
+
 /*Navbar*/
 
 nav.navbar {
@@ -88,7 +96,6 @@ nav.navbar .navbar-nav {
   display: flex;
   align-items: flex-end;
   justify-content: flex-end;
-  padding-right: 1rem;
 }
 
 nav.navbar .navbar-toggler {
@@ -99,7 +106,7 @@ nav.navbar .navbar-nav .nav-link.navbar-link {
   font-weight: 400;
   color: var(--font-color-white) !important;
   letter-spacing: 0.8px;
-  padding: 0 25px;
+  padding: 5px 25px;
   font-size: 18px;
   opacity: 0.75;
 }
@@ -149,4 +156,48 @@ nav.navbar .container {
 .porfolio .card img {
   float: left;
   height: 100%;
+}
+
+.porfolio .nav-link {
+  font-weight: 500;
+  letter-spacing: 0.8px;
+  padding: 5px 25px;
+  font-size: 18px;
+  opacity: 0.75;
+  color: var(--font-color-black);
+}
+
+/*About*/
+
+.about {
+  color: var(--background-color-black);
+}
+
+.about h3 {
+  font-size: x-large;
+  margin-bottom: 1rem;
+}
+
+.about .image-holder {
+  padding-right: 0;
+}
+.about img[alt="About me"] {
+  filter: grayscale(100%);
+}
+
+.about .list-group {
+  border-radius: 0;
+}
+
+.about .list-group .list-group-item {
+  background-color: #ffffff00;
+  border-style: none solid none solid;
+  border-width: 2px;
+}
+.about .list-group .list-group-item:first-child {
+  border-left: none;
+}
+
+.about .list-group .list-group-item:last-child {
+  border: none;
 }
