--- a/src/main.css
+++ b/src/main.css
@@ -1,19 +1,19 @@
 /*Custom fonts*/
 @font-face {
   font-family: Centra;
-  src: url('../public/assets/fonts/CentraNo2-Bold.ttf');
+  src: url('../assets/fonts/CentraNo2-Bold.ttf');
   font-weight: 700;
 }
 
 @font-face {
   font-family: Centra;
-  src: url('../public/assets/fonts/CentraNo2-Medium.ttf');
+  src: url('../assets/fonts/CentraNo2-Medium.ttf');
   font-weight: 500;
 }
 
 @font-face {
   font-family: Centra;
-  src: url('../public/assets/fonts/CentraNo2-Book.ttf');
+  src: url('../assets/fonts/CentraNo2-Book.ttf');
   font-weight: 400;
 }
 
@@ -117,6 +117,10 @@ nav.navbar .navbar-nav .active {
   opacity: 1;
 }
 
+nav.navbar  .dropdown .active {
+  text-decoration: none;
+}
+
 nav.navbar .container {
   display: flex;
   align-items: center;
@@ -131,6 +135,10 @@ nav.navbar .container button {
 
 .main-logo .carousel .carousel-item img {
   width: 100vw;
+}
+
+.main-logo .carousel .carousel-item .carousel-caption {
+  padding: 0;
 }
 
 .main-logo .carousel .carousel-item .carousel-caption a {
@@ -358,10 +366,24 @@ footer a:visited {
   font-weight: 700;
   color: var(--font-color-black);
 }
-
+/*Admin board*/
 .admin-board {
   min-height: 91vh;
   letter-spacing: 0.8px;
   font-weight: 700;
+  color: var(--font-color-black);
+}
+
+.admin-board .nav-item,
+.admin-board .nav-item a {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex: 1;
+  font-weight: 500;
+  letter-spacing: 0.8px;
+  padding: 5px 25px;
+  font-size: 18px;
+  opacity: 0.75;
   color: var(--font-color-black);
 }
