--- a/src/main.css
+++ b/src/main.css
@@ -26,9 +26,8 @@
   --font-color-white: rgb(255, 255, 255);
   --font-color-black: rgba(17, 17, 17, 0.89);
   --background-color-black: rgb(17, 17, 17);
-  --text-shadow: 3px 3px 20px #050304,
-  -2px 1px 30px #070607;
-  --box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px 0px;
+  --text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.342);
+  --box-shadow: rgba(0, 0, 0, 0.055) 1.95px 1.95px 2.6px 0px;
   --gradient-main: linear-gradient(to right, #ada996, #f2f2f2, #dbdbdb, #eaeaea);
   --gradient-card: linear-gradient(to left, #e4e3e1, #f2f2f2, #dbdbdb, #eaeaea);
 }
@@ -410,7 +409,99 @@ footer .name {
   color: var(--font-color-black);
 }
 
+
+.feedbacks .react-multi-carousel-track {
+  gap: 6rem;
+}
+
+/*Feedback Card*/
+
 .feedbacks .feedback-card {
+  position: relative;
+  width: 300px;
+  height: 350px;
+  background: #fff;
+  margin: 0 auto;
+  border-radius: 4px;
+  box-shadow:0 2px 10px rgba(0,0,0,.2);
+}
+
+.feedbacks .feedback-card:before,
+.feedbacks .feedback-card:after {
+  content:"";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 4px;
+  background: #fff;
+  transition: 0.5s;
+  z-index: -1;
+}
+
+.feedbacks .feedback-card:hover:before {
+  transform: rotate(20deg);
+  box-shadow: 0 2px 20px rgba(0,0,0,.2);
+}
+
+.feedbacks .feedback-card:hover:after {
+  transform: rotate(10deg);
+  box-shadow: 0 2px 20px rgba(0,0,0,.2);
+}
+
+.feedbacks .feedback-card .txtBx {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  bottom: 10px;
+  right: 10px;
+  background-image: var(--gradient-card);
+  transition: 0.5s;
+  z-index: 1;
+  padding: 1.5rem;
+  color: #777;
+}
+
+.feedbacks .feedback-card:hover .txtBx {
+  bottom: 80px;
+  text-shadow: var(--text-shadow);
+}
+
+.card .txtBx p {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.feedbacks .feedback-card .details {
+  position: absolute;
+  left: 10px;
+  right: 10px;
+  bottom: 10px;
+  height: 60px;
+  text-align: center;
+}
+
+.feedbacks .feedback-card .details h2 {
+  margin: 0;
+  padding: 0;
+  font-weight: 600;
+  font-size: 20px;
+  color: #777;
+} 
+
+.feedbacks .feedback-card .details h2 span {
+  font-weight: 500;
+  font-size: 16px;
+  color: var(--font-color-black);
+  display: block;
+  margin-top: 5px;
+ } 
+
+/* .feedbacks .feedback-card {
   background-image: var(--gradient-card);
   box-shadow: var(--box-shadow);
   transition: all ease-in-out .5s;
@@ -440,12 +531,7 @@ footer .name {
 
 .feedbacks .feedback-card .card-subtitle {
   text-align: right;
-}
-
-.feedbacks .react-multi-carousel-track {
-  gap: 1rem;
-}
-
+} */
 /*******NotFound*******/
 
 .not-found {
