--- a/src/main.css
+++ b/src/main.css
@@ -26,10 +26,10 @@
   --font-color-white: rgb(255, 255, 255);
   --font-color-black: rgba(17, 17, 17, 0.89);
   --background-color-black: rgb(17, 17, 17);
-  --text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.342);
+  --text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.178);
   --box-shadow: rgba(0, 0, 0, 0.055) 1.95px 1.95px 2.6px 0px;
   --gradient-main: linear-gradient(to right, #ada996, #f2f2f2, #dbdbdb, #eaeaea);
-  --gradient-card: linear-gradient(to left, #e4e3e1, #f2f2f2, #dbdbdb, #eaeaea);
+  --gradient-card: linear-gradient(to left, #e4e3e1, #f2f2f2, #ffffff, #eaeaea);
 }
 
 * {
@@ -138,7 +138,7 @@ nav.navbar .navbar-nav .nav-link {
 }
 
 nav.navbar .navbar-nav a.nav-link.navbar-link:hover,
-nav.navbar .navbar-nav .active-scroll-spy,
+nav.navbar .active-scroll-spy,
 nav.navbar .navbar-nav .active {
   opacity: 1;
 }
@@ -182,6 +182,7 @@ footer {
 footer a {
   text-decoration: none;
   margin-right: .5rem;
+  color: var(--font-color-black);
 }
 
 footer a:visited {
@@ -501,37 +502,6 @@ footer .name {
   margin-top: 5px;
  } 
 
-/* .feedbacks .feedback-card {
-  background-image: var(--gradient-card);
-  box-shadow: var(--box-shadow);
-  transition: all ease-in-out .5s;
-}
-
-.feedbacks .feedback-card .card-text {
-  display: -webkit-box;
-  justify-content: left;
-  -webkit-line-clamp: 1;
-  -webkit-box-orient: vertical;
-  overflow: hidden;
-  text-align: justify;
-}
-
-
-.feedbacks .feedback-card .card-text.expanded {
-  -webkit-line-clamp: unset;
-}
-
-.feedbacks .feedback-card .card-link {
-  display: flex;
-  color: var(--font-color-black);
-  text-transform: capitalize;
-  text-decoration: none;
-  justify-content: right;
-}
-
-.feedbacks .feedback-card .card-subtitle {
-  text-align: right;
-} */
 /*******NotFound*******/
 
 .not-found {
@@ -571,4 +541,8 @@ footer .name {
   font-size: 18px;
   opacity: 0.75;
   color: var(--font-color-black);
+}
+
+.admin-board .alert-delete-feedback {
+  z-index: 999;
 }
