--- a/src/main.css
+++ b/src/main.css
@@ -91,6 +91,7 @@ a:hover {
 ::-webkit-scrollbar-thumb:hover {
   background: #555; 
 }
+
 /*Navbar*/
 nav.navbar {
   background-color: var(--background-color-black);
@@ -103,8 +104,7 @@ nav.navbar {
 }
 
 nav.navbar h1 {
-  font-size: 30px;
-  margin-right: .5rem;
+  font-size: 28px;
   text-transform: uppercase;
 }
 
@@ -114,32 +114,28 @@ nav.navbar.scrolled {
 }
 
 
-
-nav.navbar .navbar-toggler {
-  border: none;
-}
-
 nav.navbar .navbar-nav {
   display: flex;
   align-items: flex-end;
   justify-content: flex-end;
 }
 
-nav.navbar .navbar-toggler {
-  margin-right: 1rem;
+nav.navbar .navbar-toggler,
+nav.navbar .navbar-toggler:focus {
+  outline: none !important;
+  border: none;
 }
 
-nav.navbar .navbar-nav .nav-link {
+nav.navbar .navbar-nav a.nav-link {
   font-weight: 400;
   color: var(--font-color-white) !important;
-  letter-spacing: 0.8px;
+  letter-spacing: .8px;
   padding: 0.1rem .5rem;
   font-size: 18px;
 }
 
 nav.navbar .navbar-nav a.nav-link.navbar-link:hover,
-nav.navbar .active-scroll-spy,
-nav.navbar .navbar-nav .active {
+nav.navbar .active-scroll-spy {
   opacity: 1;
 }
 
@@ -151,10 +147,6 @@ nav.navbar .container {
   display: flex;
   align-items: center;
   justify-content: space-between;
-}
-
-nav.navbar .container button {
-  margin-right: .5rem;
 }
 
 .back-to-top {
