--- a/src/main.css
+++ b/src/main.css
@@ -155,7 +155,7 @@ nav.navbar .container {
   cursor: pointer;
   bottom: 20px;
   right: 20px;
-  z-index: 99999;
+  z-index: 9999;
   background-color: var(--background-color-black);
   padding: .35rem;
   opacity: .6;
@@ -341,7 +341,8 @@ footer .name {
 }
 
 .social-icon a:hover img {
-	opacity: .8;
+	opacity: 1;
+  transform: scale(1.1);
 }
 
 .contact form input, .contact form select {
@@ -416,7 +417,7 @@ footer .name {
   width: 300px;
   height: 350px;
   background: #fff;
-  margin: 0 auto;
+  margin: 0;
   border-radius: 4px;
   box-shadow:0 2px 10px rgba(0,0,0,.2);
 }
